fix inline item alignment

--- a/src/app/components/aggregate-items/inline-reminder/inline-reminder.component.scss
+++ b/src/app/components/aggregate-items/inline-reminder/inline-reminder.component.scss
@@ -1,4 +1,13 @@
 :host {
+  .inline-item {
+    align-items: start;
+    margin-top: 14px;
+
+    .wrapper {
+      padding-top: 2px;
+    }
+  }
+
   input {
     margin: 0;
   }
