--- a/src/styles.scss
+++ b/src/styles.scss
@@ -135,7 +135,7 @@ svg {
 
 .inline-item {
   display: flex;
-  padding-top: 14px;
+  align-items: center;
 
   > app-icon {
     margin-left: 10px;
@@ -143,7 +143,7 @@ svg {
 
   .wrapper {
     flex-grow: 1;
-    padding: 2px 14px 14px 0;
+    padding: 14px 14px 14px 0;
     margin-left: 14px;
     display: grid;
     grid-template-areas:
